minor fix - favicon now aviable

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" type="text/css" href="./pages/index.css"> -->
     <!-- adding a favicon is not in the task, but I'm tired of seeing an error in the console =) -->
-    <link rel="shortcut icon" href="./img/favicon-32x32.png" type="image/png">
+    <link rel="shortcut icon" href="<%=require('./img/favicon-32x32.png')%>" type="image/png">
     <title>Around the U.S.</title>
 </head>
 
